# gcl

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  conanfile.py  test.sh
.github/workflows/: gcl-tests.yml  github-actions.yml
include/: gcl.h
src/: gcl.cpp  gcl.h  test.h  test_Task.cpp
test/: example.cpp  test.cpp
